--- a/app/less/base/_base.less
+++ b/app/less/base/_base.less
@@ -1,13 +1,15 @@
-html, body {
-  height: 100%;
-  min-height: 100%;
-}
+//html, body {
+//  height: 100%;
+//  min-height: 100%;
+//}
 
 body {
   position: relative;
   overflow-x: hidden;
   font-family: @Roboto;
-  //background: #fff url("/img/2.png") top left/100% 100% no-repeat;
+  background: #fff url("/img/2.png") top left no-repeat;
+  -webkit-background-size: contain;
+  background-size: contain;
 }
 
 ul, li {
@@ -48,44 +50,18 @@ input, textarea, button, select {
 
 .up-button {
   position: relative;
-  border-radius: 50%;
-  border: 1px solid #908f8f;
   height: 42px;
   width: 42px;
   display: inline-block;
   text-align: center;
-  &:after {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    content: '';
-    width: 1px;
-    height: 22px;
-    background-color: #908f8f;
-    transform: translate(-50%, -50%);
-    transition: background-color 0.3s;
-  }
-  &:before {
-    content: '';
-    position: absolute;
-    top: 10px;
-    left: 50%;
-    margin-left: -3.5px;
-    width: 7px;
-    height: 7px;
-    border-top: 1px solid #908f8f;
-    border-right: 1px solid #908f8f;
-    transform: rotate(-45deg);
-    transition: border-color 0.3s;
-  }
+  background: url("/img/button-up.png") 0 0 no-repeat;
+  -webkit-transition: none;
+  -moz-transition: none;
+  -ms-transition: none;
+  -o-transition: none;
+  transition: none;
   &:hover {
-    border-color: #9fab8d;
-    &:after {
-      background-color: #9fab8d;
-    }
-    &:before {
-      border-color: #9fab8d;
-    }
+    background-position: 0 -42px;
   }
 }
 
@@ -141,6 +117,37 @@ footer {
   }
 }
 
+.button-read-more {
+  width: 220px;
+  height: 59px;
+  display: inline-block;
+  text-align: center;
+  border: 2px solid #829665;
+  background-color: #829665;
+  color: #ffffff;
+  text-transform: uppercase;
+  font: 14px/55px @Roboto-Black;
+  &:hover {
+    color: #102323;
+    border-color: #102323;
+    background-color: transparent;
+  }
+}
+
+.button-read {
+  width: 204px;
+  height: 70px;
+  background-color: #829665;
+  color: #ffffff;
+  font: 16px/70px @Roboto-Bold;
+  text-transform: uppercase;
+  display: inline-block;
+  text-align: center;
+  &:hover {
+    color: #102323;
+  }
+}
+
 .section-title-block {
   &:extend(.flex);
   flex-direction: column;
@@ -151,30 +158,67 @@ footer {
   .section-number-line {
     font-size: 36px;
     color: #829665;
-    &:after{
+    &:after {
       display: inline-block;
-      height: 10px;
+      height: 9px;
       background-color: #829665;
       content: '';
-      width: 100px;
+      width: 146px;
       vertical-align: bottom;
       margin-left: 25px;
       position: relative;
     }
   }
-  .section-title-name{
+  .section-title-name {
     font-size: 48px;
     color: #102323;
     margin-top: 40px;
+    letter-spacing: 3.3px;
   }
 }
 
-.section-container{
-  width: 1212px;
+.section-container {
+  width: 1270px;
+  margin: 0 auto;
 }
 
-.navigation{
+.navigation-list {
+  position: fixed;
+  top: 50%;
+  left: 60px;
+  transform: translateY(-50%);
   width: 50px;
+  li {
+    display: block;
+    width: 100%;
+    text-align: center;
+    &.active {
+      .navigation-item {
+        width: 100%;
+        -webkit-border-radius: 0;
+        -moz-border-radius: 0;
+        border-radius: 0;
+        background-color: #102323;
+        border-color: #102323;
+      }
+    }
+    .navigation-item {
+      animation-fill-mode: none;
+      display: inline-block;
+      height: 11px;
+      width: 11px;
+      border: 1px solid #8c8c8c;
+      background-color: transparent;
+      -webkit-border-radius: 50%;
+      -moz-border-radius: 50%;
+      border-radius: 50%;
+      position: relative;
+      &:hover {
+        background-color: #102323;
+        border-color: #102323;
+      }
+    }
+  }
 }
 
 .social-list {
@@ -187,9 +231,55 @@ footer {
     a {
       font-size: 20px;
       color: #302f2f;
+      line-height: 1;
+      .fa {
+        line-height: 1;
+      }
       &:hover {
         color: #c5cbcc;
       }
     }
   }
 }
+
+//@keyframes animRectangle {
+//  0% {
+//    -webkit-border-radius: 50%;
+//    -moz-border-radius: 50%;
+//    border-radius: 50%;
+//    border-color: #c5cbcc;
+//    width: 11px;
+//  }
+//  20% {
+//    -webkit-border-radius: 0;
+//    -moz-border-radius: 0;
+//    border-radius: 0;
+//    border-color: #102323;
+//    background: #102323;
+//    width: 11px;
+//  }
+//  60% {
+//    -webkit-border-radius: 0;
+//    -moz-border-radius: 0;
+//    border-radius: 0;
+//    background: #102323;
+//    border-color: #102323;
+//    width: 11px;
+//  }
+//  80%{
+//    -webkit-border-radius: 0;
+//    -moz-border-radius: 0;
+//    border-radius: 0;
+//    border-color: #102323;
+//    background: #102323;
+//    width: 50%;
+//  }
+//  100% {
+//    -webkit-border-radius: 0;
+//    -moz-border-radius: 0;
+//    border-radius: 0;
+//    border-color: #102323;
+//    background: #102323;
+//    width: 100%;
+//  }
+//}
