--- a/app/less/components/contact-form/_contact-form.less
+++ b/app/less/components/contact-form/_contact-form.less
@@ -11,12 +11,15 @@
 .contact-form-desription {
   color: #ffffff;
   text-align: center;
+  max-width: 780px;
+  width: 100%;
   .contact-form-title {
     font: 30px/40px @Roboto;
     text-transform: uppercase;
   }
   .contact-form-info {
     font: 16px/30px @Forum;
+    margin-bottom: 30px;
   }
 }
 
@@ -31,26 +34,44 @@
     input {
       background-color: transparent;
       color: #fff;
-      padding: 0 10px;
+      //padding: 0 10px;
+      padding-left: 51px;
+      padding-right: 10px;
+      font-size: 16px;
+      &:focus {
+        &::-webkit-input-placeholder {
+          color: transparent;
+        }
+        &:-moz-placeholder {
+          color: transparent;
+        }
+        &::-moz-placeholder {
+          color: transparent;
+        }
+        &:-ms-input-placeholder {
+          color: transparent;
+        }
+      }
+
       &::-webkit-input-placeholder { /* Chrome/Opera/Safari */
         color: #ffffff;
-        font: 16px @Roboto;
-        padding-left: 3em;
+        font: 16px/56px @Roboto;
+        margin-left: 51px;
       }
       &::-moz-placeholder { /* Firefox 19+ */
         color: #ffffff;
-        font: 16px @Roboto;
-        padding-left: 3em;
-      }
-      &:-ms-input-placeholder { /* IE 10+ */
-        color: #ffffff;
-        font: 16px @Roboto;
-        padding-left: 3em;
+        font: 16px/56px @Roboto;
+        margin-left: 51px;
       }
       &:-moz-placeholder { /* Firefox 18- */
         color: #ffffff;
-        font: 16px @Roboto;
-        padding-left: 3em;
+        font: 16px/56px @Roboto;
+        margin-left: 51px;
+      }
+      &:-ms-input-placeholder { /* IE 10+ */
+        color: #ffffff;
+        font: 16px/56px @Roboto;
+        margin-left: 51px;
       }
     }
     .contact-form-button {
