--- a/app/components/contact-form/contact-form.html
+++ b/app/components/contact-form/contact-form.html
@@ -15,30 +15,30 @@
         </div>
     </div>
     <div class="contact-logo-block">
-    <img src="/img/logo-black.png" alt="">    
+        <img src="/img/logo-black.png" alt="">
     </div>
-
     <div class="contact-information-block">
-    <p>+86 185 2150 5122</p>
-    <p>info@enjoytrading.com</p>
+        <p>+86 185 2150 5122</p>
+        <p>info@enjoytrading.com</p>
     </div>
-<div class="contact-social-block">
-    <ul class="social-list">
-        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-        <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-    </ul>
-</div>
+    <div class="contact-social-block">
+        <ul class="social-list">
+            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+            <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+        </ul>
+    </div>
+    <div class="contact-adress">Rm 102, #3, Lane 179, Lian Nong Rd.,<br>Minhang District, Shanghai, PR of China</div>
 </div>
 
 <footer>
     <div class="footer-wrap">
         <div class="up-button-block">
-      <a href='#' class="up-button"></a>
-      </div>
-      <div class="footer-desription">
-          Copyright &copy 2018 STEAK LAB / studio design
-      </div>
+            <a href='#' class="up-button"></a>
+        </div>
+        <div class="footer-desription">
+            Copyright &copy 2018 STEAK LAB / studio design
+        </div>
     </div>
 </footer>
