--- a/app/components/menu/menu.html
+++ b/app/components/menu/menu.html
@@ -4,7 +4,7 @@
     <!--</div>-->
     <div class="menu-block">
         <ul class="menu-list">
-            <li><a href="#" class="menu-item"><span>01</span> HOME</a></li>
+            <li class="active"><a href="#" class="menu-item"><span>01</span> HOME</a></li>
             <li><a href="#" class="menu-item"><span>02</span> ABOUT US</a></li>
             <li><a href="#" class="menu-item"><span>03</span> SERVICE</a></li>
             <li><a href="#" class="menu-item"><span>04</span> partners</a></li>
