--- a/app/css/main.css
+++ b/app/css/main.css
@@ -5,14 +5,17 @@
 .section-title-block,
 .menu-wrap,
 .menu-wrap .menu-block .menu-list,
-.sectiom-home .home-center-block,
-.sectiom-home .section-container,
+.sectiom-home .home-container,
 .section-about .section-about-top-block,
 .section-about .section-about-bottom-block,
 .service .section-container,
+.partners .partners-table-block,
+.partners .partners-column,
+.partners .partners-column-right .partners-item,
 .center_align,
 .center_align,
 .contact-form-block .contact-form,
+.sectiom-home .home-scroll-down-block,
 .service .service-provide-block,
 .contact-form-wrap,
 .contact-form-wrap,
@@ -40,6 +43,7 @@
 .vertical_align,
 .center_align,
 .contact-form-block .contact-form,
+.sectiom-home .home-scroll-down-block,
 .service .service-provide-block,
 .contact-form-wrap,
 .menu-wrap .menu-logo-block {
@@ -113,6 +117,8 @@ select {
   position: relative;
   height: 42px;
   width: 42px;
+  top: -13px;
+  left: -5px;
   display: inline-block;
   text-align: center;
   background: url("/img/button-up.png") 0 0 no-repeat;
@@ -157,7 +163,7 @@ footer .footer-wrap {
   z-index: 5;
 }
 footer .footer-wrap .footer-desription {
-  margin: 33px 0 103px;
+  margin: 17px 0 100px;
   color: #102323;
   font: 14px "Forum";
 }
@@ -183,7 +189,8 @@ footer .footer-wrap .footer-desription {
   background-color: #829665;
   color: #ffffff;
   text-transform: uppercase;
-  font: 14px/55px "Roboto-Black";
+  font: 14px/59px "Roboto-Black";
+  letter-spacing: 2.8px;
 }
 .button-read-more:hover {
   color: #102323;
@@ -199,6 +206,7 @@ footer .footer-wrap .footer-desription {
   text-transform: uppercase;
   display: inline-block;
   text-align: center;
+  letter-spacing: 2.8px;
 }
 .button-read:hover {
   color: #102323;
@@ -220,6 +228,7 @@ footer .footer-wrap .footer-desription {
 .section-title-block .section-number-line {
   font-size: 36px;
   color: #829665;
+  letter-spacing: 2px;
 }
 .section-title-block .section-number-line:after {
   display: inline-block;
@@ -228,23 +237,23 @@ footer .footer-wrap .footer-desription {
   content: '';
   width: 146px;
   vertical-align: bottom;
-  margin-left: 25px;
+  margin-left: 21px;
   position: relative;
 }
 .section-title-block .section-title-name {
   font-size: 48px;
   color: #102323;
   margin-top: 40px;
-  letter-spacing: 3.3px;
+  letter-spacing: 4px;
 }
 .section-container {
-  width: 1270px;
+  width: 1216px;
   margin: 0 auto;
 }
 .navigation-list {
   position: fixed;
   top: 50%;
-  left: 60px;
+  right: 62px;
   -webkit-transform: translateY(-50%);
       -ms-transform: translateY(-50%);
           transform: translateY(-50%);
@@ -254,6 +263,9 @@ footer .footer-wrap .footer-desription {
   display: block;
   width: 100%;
   text-align: center;
+  margin-bottom: 49px;
+  font-size: 0;
+  line-height: 1;
 }
 .navigation-list li.active .navigation-item {
   width: 100%;
@@ -261,6 +273,7 @@ footer .footer-wrap .footer-desription {
   border-radius: 0;
   background-color: #102323;
   border-color: #102323;
+  height: 8px;
 }
 .navigation-list li .navigation-item {
   -webkit-animation-fill-mode: none;
@@ -286,9 +299,11 @@ footer .footer-wrap .footer-desription {
 }
 .social-list li {
   text-align: center;
+  font-size: 0;
+  line-height: 1;
 }
 .social-list li a {
-  font-size: 20px;
+  font-size: 23px;
   color: #302f2f;
   line-height: 1;
 }
@@ -323,6 +338,10 @@ footer .footer-wrap .footer-desription {
 .contact-form-desription .contact-form-info {
   font: 16px/30px "Forum";
   margin-bottom: 30px;
+}
+.contact-form-block .contact-form {
+  position: relative;
+  top: 9px;
 }
 .contact-form-block .contact-form input,
 .contact-form-block .contact-form button {
@@ -403,23 +422,30 @@ footer .footer-wrap .footer-desription {
   color: #102323;
   font: 30px/1 "Forum";
   text-transform: uppercase;
-  letter-spacing: 1.5px;
+  letter-spacing: 3.5px;
 }
 .contact-information-block p {
-  margin-bottom: 20px;
+  margin-bottom: 11px;
 }
 .contact-information-block p:last-child {
   margin-bottom: 0;
 }
 .contact-social-block {
   width: 100%;
-  margin: 72px 0 138px;
+  margin: 80px 0 43px;
 }
 .contact-social-block .social-list li {
   display: inline-block;
   font-size: 0;
   width: 60px;
   margin: 0 10px;
+}
+.contact-adress {
+  color: #102323;
+  font: 16px/24px "Forum";
+  letter-spacing: 0.8px;
+  margin-bottom: 62px;
+  text-align: center;
 }
 .menu-wrap {
   -webkit-box-pack: start;
@@ -448,7 +474,7 @@ footer .footer-wrap .footer-desription {
   width: 100%;
   color: #ffffff;
   font: 500 16px/1 "Roboto";
-  padding: 4.0625em 0;
+  padding: 4.6em 0 3.53em;
   text-transform: uppercase;
   letter-spacing: 1.6px;
   overflow: hidden;
@@ -481,17 +507,30 @@ footer .footer-wrap .footer-desription {
 }
 .sectiom-home .home-logo-block {
   text-align: center;
-  margin: 71px 0 218px;
+  margin: 71px 0 222px;
 }
 .sectiom-home .home-center-block {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-pack: justify;
   -webkit-justify-content: space-between;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding: 0 66px;
+  padding: 0 50px;
+}
+.sectiom-home .home-container {
+  width: 100%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 .sectiom-home .section-title-block {
-  margin: 0 auto 75px;
+  margin: 0 auto 64px;
+  padding-left: 70px;
 }
 .sectiom-home .section-title-block .section-title-name {
   color: #ffffff;
@@ -500,16 +539,16 @@ footer .footer-wrap .footer-desription {
   letter-spacing: 6px;
 }
 .sectiom-home .section-home-description {
-  margin-bottom: 150px;
+  margin-bottom: 148px;
   margin-left: auto;
-  margin-right: 27px;
+  margin-right: 260px;
   text-align: right;
   max-width: 835px;
   opacity: 0.79;
   color: #fffffe;
   font: 18px/2em "Roboto-Black";
   text-transform: uppercase;
-  letter-spacing: 1.8px;
+  letter-spacing: 1.3px;
 }
 .sectiom-home .home-social-block {
   padding-left: 44px;
@@ -528,12 +567,58 @@ footer .footer-wrap .footer-desription {
 }
 .sectiom-home .home-social-block .social-list li a {
   color: #efebe3;
+  font-size: 23px;
 }
 .sectiom-home .home-social-block .social-list li a:hover {
   color: #c5cbcc;
 }
+.sectiom-home .home-scroll-down-block {
+  width: 66px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.sectiom-home .home-scroll-down-block .scroll-down-circle {
+  display: block;
+  width: 22px;
+  height: 22px;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+  border: 1px solid #ffffff;
+  margin-bottom: 107px;
+}
+.sectiom-home .home-scroll-down-block .scroll-down-text {
+  color: #ffffff;
+  font: 16px "Arial";
+  text-transform: uppercase;
+  letter-spacing: 1.6px;
+  -webkit-transform: rotate(90deg);
+      -ms-transform: rotate(90deg);
+          transform: rotate(90deg);
+  white-space: nowrap;
+}
+.sectiom-home .list-angles {
+  margin-top: 135px;
+  color: #ffffff;
+}
+.sectiom-home .list-angles li {
+  font-size: 35px;
+  line-height: 1;
+  position: relative;
+}
+.sectiom-home .list-angles li .fa {
+  line-height: 1;
+}
+.sectiom-home .list-angles li:first-child {
+  top: 35px;
+}
+.sectiom-home .list-angles li:nth-child(2) {
+  top: 13px;
+}
 .section-about {
-  margin: 155px 0 160px;
+  margin: 155px 0 157px;
 }
 .section-about .section-about-top-block {
   -webkit-box-align: start;
@@ -544,7 +629,7 @@ footer .footer-wrap .footer-desription {
   -webkit-justify-content: flex-start;
       -ms-flex-pack: start;
           justify-content: flex-start;
-  margin-bottom: 70px;
+  margin-bottom: 69px;
 }
 .section-about .section-title-block {
   width: 29.7%;
@@ -567,8 +652,8 @@ footer .footer-wrap .footer-desription {
   position: relative;
   text-align: right;
   padding-right: 11px;
-  width: 46.46%;
-  left: -9px;
+  width: 48.5%;
+  left: -12px;
 }
 .section-about .section-about-bottom-block .sectiom-about-image-block:after {
   position: absolute;
@@ -582,19 +667,19 @@ footer .footer-wrap .footer-desription {
 }
 .section-about .section-about-bottom-block .section-about-content {
   margin-top: 280px;
-  width: 41.65%;
-  margin-left: 7.87%;
+  width: 42%;
+  margin-left: 8.7%;
 }
 .section-about .section-about-bottom-block .sectiom-about-short-info {
   color: #102323;
   font: 16px/1.5em "Roboto-Bold";
   letter-spacing: 1.6px;
-  margin-bottom: 80px;
+  margin-bottom: 72px;
 }
 .section-about .section-about-bottom-block .section-about-button-block p {
   color: #616161;
   font: 18px "Forum";
-  letter-spacing: 1.6px;
+  letter-spacing: 0.5px;
   margin-bottom: 16px;
 }
 .service {
@@ -613,9 +698,9 @@ footer .footer-wrap .footer-desription {
   margin: 30px 0 65px;
 }
 .service .service-list li {
-  margin-bottom: 20px;
+  margin-bottom: 18px;
   color: #292929;
-  font: 14px/1em "Roboto";
+  font: 11px "Roboto";
   text-transform: uppercase;
 }
 .service .service-list li:last-child {
@@ -626,9 +711,9 @@ footer .footer-wrap .footer-desription {
 }
 .service .service-image-block {
   position: relative;
-  width: 48.19%;
+  width: 50.20%;
   text-align: center;
-  margin-left: 11.81%;
+  margin-left: 13.81%;
 }
 .service .service-image-block:after {
   position: absolute;
@@ -652,15 +737,156 @@ footer .footer-wrap .footer-desription {
   text-transform: uppercase;
   letter-spacing: 3px;
   text-align: right;
-  width: 21.88%;
+  width: 23%;
 }
 .service .service-provide-block .service-provide-info-block {
   margin-left: 7.87%;
   color: #afb0b0;
   font: 16px/30px "Forum";
   letter-spacing: 1.5px;
-  width: 61.18%;
+  width: 65%;
+}
+.partners {
+  margin-bottom: 266px;
+}
+.partners .section-title-block {
+  margin-bottom: 20px;
+}
+.partners .partners-table-block,
+.partners .partners-column {
+  -webkit-box-align: start;
+  -webkit-align-items: flex-start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+.partners .partners-image-block {
+  position: relative;
+  cursor: pointer;
+}
+.partners .partners-image-block:hover > .partners-popup {
+  -webkit-transform: scale(1);
+      -ms-transform: scale(1);
+          transform: scale(1);
+  opacity: 0.79;
+}
+.partners .partners-popup {
+  text-align: center;
+  padding: 18.4% 15% 0;
+  position: absolute;
+  top: 5%;
+  right: 5%;
+  width: 90%;
+  height: 90%;
+  background-color: #102323;
+  opacity: 0;
+  -webkit-transform: scale(0.3);
+      -ms-transform: scale(0.3);
+          transform: scale(0.3);
+  -webkit-transition: opacity 0.4s ease-in-out, -webkit-transform 0.4s ease-in-out;
+  transition: opacity 0.4s ease-in-out, -webkit-transform 0.4s ease-in-out;
+  -o-transition: transform 0.4s ease-in-out, opacity 0.4s ease-in-out;
+  transition: transform 0.4s ease-in-out, opacity 0.4s ease-in-out;
+  transition: transform 0.4s ease-in-out, opacity 0.4s ease-in-out, -webkit-transform 0.4s ease-in-out;
+}
+.partners .partners-popup .partners-popup-info {
+  margin-top: 30px;
+  color: #ffffff;
+  font: 16px/18px "Forum";
+  letter-spacing: 1.6px;
+}
+.partners .partners-item-text-block {
+  position: relative;
+  width: 100%;
+  color: #102323;
+  font: 18px/24px "Forum";
+  letter-spacing: 1.8px;
+  padding-left: 50px;
+  margin-bottom: 37px;
+}
+.partners .partners-item-text-block:before {
+  position: absolute;
+  width: 16px;
+  height: 16px;
+  top: 0;
+  left: 6px;
+  background: url("/img/partners-circle.png") top left / 100% 100% no-repeat;
+  content: '';
+}
+.partners .partners-table-block {
+  width: 1268px;
+  -webkit-flex-wrap: nowrap;
+      -ms-flex-wrap: nowrap;
+          flex-wrap: nowrap;
+  margin: 0 auto;
+  position: relative;
+  left: 23px;
+}
+.partners .partners-column-left {
+  width: 50%;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-flow: row nowrap;
+      -ms-flex-flow: row nowrap;
+          flex-flow: row nowrap;
+  padding-right: 9px;
+}
+.partners .partners-column-left .partners-item {
+  margin-right: 3%;
+  width: 100%;
+}
+.partners .partners-column-left .partners-item:first-child {
+  width: 38%;
+  margin-top: 152px;
+}
+.partners .partners-column-left .partners-item:last-child {
+  margin-right: 0;
+  width: 62%;
+  margin-top: 65px;
+}
+.partners .partners-column-right {
+  width: 50%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding-left: 9px;
+}
+.partners .partners-column-right .partners-item {
+  margin-bottom: 3%;
+  width: 100%;
+}
+.partners .partners-column-right .partners-item .partners-image-block {
+  margin-right: 3%;
+}
+.partners .partners-column-right .partners-item .partners-image-block:last-child {
+  margin-right: 0;
+}
+.partners .partners-column-right .partners-item:first-child {
+  -webkit-box-align: end;
+  -webkit-align-items: flex-end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+.partners .partners-column-right .partners-item:first-child .partners-image-block:first-child {
+  width: 36%;
+}
+.partners .partners-column-right .partners-item:first-child .partners-image-block:last-child {
+  width: 61%;
+}
+.partners .partners-column-right .partners-item:last-child {
+  -webkit-box-align: start;
+  -webkit-align-items: flex-start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  margin-bottom: 0;
+}
+.partners .partners-column-right .partners-item:last-child .partners-image-block:first-child {
+  width: 49%;
+}
+.partners .partners-column-right .partners-item:last-child .partners-image-block:last-child {
+  width: 48%;
 }
 .contact .section-container {
-  margin-bottom: 80px;
+  margin-bottom: 76px;
 }
