--- a/app/less/components/contact-form/_contact-form.less
+++ b/app/less/components/contact-form/_contact-form.less
@@ -25,6 +25,8 @@
 
 .contact-form-block {
   .contact-form {
+    position: relative;
+    top: 9px;
     &:extend(.vertical_align);
     input, button {
       width: 269px;
@@ -110,9 +112,9 @@
   color: #102323;
   font: 30px/1 @Forum;
   text-transform: uppercase;
-  letter-spacing: 1.5px;
+  letter-spacing: 3.5px;
   p {
-    margin-bottom: 20px;
+    margin-bottom: 11px;
     &:last-child {
       margin-bottom: 0;
     }
@@ -121,7 +123,7 @@
 
 .contact-social-block {
   width: 100%;
-  margin: 72px 0 138px;
+  margin: 80px 0 43px;
   .social-list {
     li {
       display: inline-block;
@@ -130,4 +132,12 @@
       margin: 0 10px;
     }
   }
+}
+
+.contact-adress{
+  color: #102323;
+  font: 16px/24px @Forum;
+  letter-spacing: 0.8px;
+  margin-bottom: 62px;
+  text-align: center;
 }
