--- a/app/less/components/menu/_menu.less
+++ b/app/less/components/menu/_menu.less
@@ -21,7 +21,7 @@
           width: 100%;
           color: #ffffff;
           font: 500 16px/1 @Roboto;
-          padding: 4.0625em 0;
+          padding: 4.6em 0 3.53em;
           text-transform: uppercase;
           letter-spacing: 1.6px;
           overflow: hidden;
